Update Agentize Landscape to make compatible with 2.0

--- a/Session_12_Traders_Move_part_4.ipynb
+++ b/Session_12_Traders_Move_part_4.ipynb
@@ -23,29 +23,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ikSl2Mz0m252",
-        "outputId": "56277fa1-aaff-4e79-fba9-bd02fbfdc3fc"
+        "id": "ikSl2Mz0m252"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "\n",
-        "try: \n",
+        "try:\n",
         "  import mesa\n",
-        "except: \n",
+        "except:\n",
         "  !pip install mesa --quiet\n",
         "import mesa\n",
         "import numpy as np\n",
@@ -105,12 +93,12 @@
       "source": [
         "class Sugar(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Sugar: \n",
+        "  Sugar:\n",
         "  - contains an amount of sugar\n",
-        "  - grows 1 amount of sugar at each turn \n",
+        "  - grows 1 amount of sugar at each turn\n",
         "  \"\"\"\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, max_sugar): \n",
+        "  def __init__(self, unique_id, model, pos, max_sugar):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
         "    self.amount = max_sugar\n",
@@ -135,7 +123,7 @@
       "source": [
         "class Spice(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Spice: \n",
+        "  Spice:\n",
         "  - contains an amount of spice\n",
         "  - grows 1 amount of spice at each turn\n",
         "  \"\"\"\n",
@@ -145,8 +133,8 @@
         "    self.pos = pos\n",
         "    self.amount = max_spice\n",
         "    self.max_spice = max_spice\n",
-        "  \n",
-        "  def step(self): \n",
+        "\n",
+        "  def step(self):\n",
         "    '''\n",
         "    Spice growth function, adds one unit of spice each step until\n",
         "    max amout\n",
@@ -171,16 +159,16 @@
       },
       "outputs": [],
       "source": [
-        "class Trader(mesa.Agent): \n",
+        "class Trader(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Trader: \n",
+        "  Trader:\n",
         "  - has a metabolism of sugar and spice\n",
         "  - harvest and trade sugar and spice to survive\n",
         "  \"\"\"\n",
         "\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0, \n",
-        "               spice=0, metabolism_sugar=0, metabolism_spice=0, \n",
+        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0,\n",
+        "               spice=0, metabolism_sugar=0, metabolism_spice=0,\n",
         "               vision=0):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
@@ -191,7 +179,7 @@
         "    self.metabolism_spice = metabolism_spice\n",
         "    self.vision = vision\n",
         "\n",
-        "  \n",
+        "\n",
         "  def get_sugar(self, pos):\n",
         "    '''\n",
         "    used in self.get_sugar_amount()\n",
@@ -202,8 +190,8 @@
         "      if type(agent) is Sugar:\n",
         "        return agent\n",
         "    return None\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def get_sugar_amount(self,pos):\n",
         "    '''\n",
         "    used in self.move() as part of self.calculate_welfare()\n",
@@ -213,15 +201,15 @@
         "    if sugar_patch:\n",
         "      return sugar_patch.amount\n",
         "    return 0\n",
-        "  \n",
+        "\n",
         "  def get_spice(self, pos):\n",
         "    '''\n",
         "    used in self.get_spice_amount()\n",
         "    '''\n",
         "\n",
         "    this_cell = self.model.grid.get_cell_list_contents(pos)\n",
-        "    for agent in this_cell: \n",
-        "      if type(agent) is Spice: \n",
+        "    for agent in this_cell:\n",
+        "      if type(agent) is Spice:\n",
         "        return agent\n",
         "    return None\n",
         "\n",
@@ -231,27 +219,27 @@
         "    '''\n",
         "\n",
         "    spice_patch = self.get_spice(pos)\n",
-        "    if spice_patch: \n",
+        "    if spice_patch:\n",
         "      return spice_patch.amount\n",
         "    return 0\n",
-        "  \n",
-        "    \n",
+        "\n",
+        "\n",
         "  def is_occupied_by_other(self,pos):\n",
         "    '''\n",
         "    helper function part 1 of self.move()\n",
         "    '''\n",
         "\n",
-        "    if pos == self.pos: \n",
+        "    if pos == self.pos:\n",
         "      # agent's position is considered unoccupied as agent can stay there\n",
         "      return False\n",
         "    # get contents of each cell in neighborhood\n",
         "    this_cell = self.model.grid.get_cell_list_contents(pos)\n",
-        "    for a in this_cell: \n",
+        "    for a in this_cell:\n",
         "      # see if occupied by another agent\n",
-        "      if isinstance(a, Trader): \n",
+        "      if isinstance(a, Trader):\n",
         "        return True\n",
         "    return False\n",
-        "  \n",
+        "\n",
         "  def calculate_welfare(self, sugar, spice):\n",
         "    '''\n",
         "    helper function part 2 self.move()\n",
@@ -259,19 +247,19 @@
         "\n",
         "    # calculate total resources\n",
         "    m_total = self.metabolism_sugar + self.metabolism_spice\n",
-        "    # Cobb-Douglas functional form    \n",
+        "    # Cobb-Douglas functional form\n",
         "    return sugar**(self.metabolism_sugar/m_total) * spice**(\n",
         "        self.metabolism_spice/m_total)\n",
-        "  \n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
+        "\n",
         "  ######################################################################\n",
-        "  #                                                                    #  \n",
-        "  #                      MAIN TRADE FUNCTIONS                          #  \n",
+        "  #                                                                    #\n",
+        "  #                      MAIN TRADE FUNCTIONS                          #\n",
         "  #                                                                    #\n",
         "  ######################################################################\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def move(self):\n",
         "    '''\n",
         "    Function for trader agent to identify optimal move for each step in 4 parts\n",
@@ -285,7 +273,7 @@
         "\n",
         "    neighbors = [i\n",
         "                 for i in self.model.grid.get_neighborhood(\n",
-        "                   self.pos, self.moore, True, self.vision  \n",
+        "                   self.pos, self.moore, True, self.vision\n",
         "                 ) if not self.is_occupied_by_other(i)]\n",
         "\n",
         "    # 2. determine which move maximizes welfare\n",
@@ -293,13 +281,13 @@
         "    welfares = [\n",
         "        self.calculate_welfare(\n",
         "            self.sugar + self.get_sugar_amount(pos),\n",
-        "            self.spice + self.get_spice_amount(pos)) \n",
+        "            self.spice + self.get_spice_amount(pos))\n",
         "        for pos in neighbors\n",
         "    ]\n",
         "\n",
         "    # 3. Find closest best option\n",
         "\n",
-        "    # find the highest welfare in welfares \n",
+        "    # find the highest welfare in welfares\n",
         "    max_welfare = max(welfares)\n",
         "    # get the index of max welfare cells\n",
         "    candidate_indices = [i for i in range(len(welfares))\n",
@@ -319,7 +307,7 @@
         "    self.model.grid.move_agent(self, final_candidates[0])\n",
         "\n",
         "    print(min_dist, final_candidates)\n",
-        "    \n"
+        "\n"
       ]
     },
     {
@@ -343,15 +331,15 @@
         "  \"\"\"\n",
         "  Manager class to run Sugarscape with Traders\n",
         "  \"\"\"\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def __init__(self, width=50,height=50, initial_population=200,\n",
         "               endowment_min=25, endowment_max=50, metabolism_min=1,\n",
         "               metabolism_max=5, vision_min=1, vision_max=5):\n",
-        "    \n",
+        "\n",
         "    #Initiate width and heigh of sugarscape\n",
         "    self.width = width\n",
-        "    self.height = height \n",
+        "    self.height = height\n",
         "    #Initiate population attributes\n",
         "    self.initial_population = initial_population\n",
         "    self.endowment_min = endowment_min\n",
@@ -362,29 +350,29 @@
         "    self.vision_max = vision_max\n",
         "\n",
         "    #initiate activation schedule\n",
-        "    self.schedule = mesa.time.RandomActivationByType(self)    \n",
+        "    self.schedule = mesa.time.RandomActivationByType(self)\n",
         "    #initiate mesa grid class\n",
         "    self.grid = mesa.space.MultiGrid(self.width, self.height, torus=False)\n",
         "\n",
-        "    #read in landscape file from supplmentary material \n",
+        "    #read in landscape file from supplmentary material\n",
         "    sugar_distribution =np.genfromtxt(\"/content/drive/MyDrive/sugar-map.txt\")\n",
         "    spice_distribution = np.flip(sugar_distribution, 1)\n",
-        "    \n",
+        "\n",
         "    agent_id = 0\n",
-        "    for _,x,y in self.grid.coord_iter():\n",
+        "    for _,(x,y) in self.grid.coord_iter():\n",
         "      max_sugar = sugar_distribution[x,y]\n",
-        "      if max_sugar > 0: \n",
+        "      if max_sugar > 0:\n",
         "        sugar = Sugar(agent_id, self, (x,y), max_sugar)\n",
         "        self.schedule.add(sugar)\n",
         "        self.grid.place_agent(sugar, (x,y))\n",
         "        agent_id += 1\n",
-        "    \n",
+        "\n",
         "      max_spice = spice_distribution[x,y]\n",
-        "      if max_spice > 0: \n",
+        "      if max_spice > 0:\n",
         "        spice = Spice(agent_id, self, (x,y), max_spice)\n",
         "        self.schedule.add(spice)\n",
         "        self.grid.place_agent(spice, (x,y))\n",
-        "        agent_id += 1    \n",
+        "        agent_id += 1\n",
         "\n",
         "    for i in range(self.initial_population):\n",
         "      #get agent position\n",
@@ -400,14 +388,14 @@
         "      #give agents vision\n",
         "      vision = int(self.random.uniform(self.vision_min, self.vision_max+1))\n",
         "      #create Trader object\n",
-        "      trader = Trader(agent_id, \n",
+        "      trader = Trader(agent_id,\n",
         "                      self,\n",
         "                      (x,y),\n",
-        "                      moore = False, \n",
-        "                      sugar = sugar, \n",
-        "                      spice = spice, \n",
-        "                      metabolism_sugar = metabolism_sugar, \n",
-        "                      metabolism_spice = metabolism_spice, \n",
+        "                      moore = False,\n",
+        "                      sugar = sugar,\n",
+        "                      spice = spice,\n",
+        "                      metabolism_sugar = metabolism_sugar,\n",
+        "                      metabolism_spice = metabolism_spice,\n",
         "                      vision = vision)\n",
         "      #place agent\n",
         "      self.grid.place_agent(trader, (x,y))\n",
@@ -418,24 +406,24 @@
         "    '''\n",
         "    Unique step function that does staged activation of sugar and spice\n",
         "    and then randomly activates traders\n",
-        "    '''    \n",
+        "    '''\n",
         "    # step Sugar agents\n",
-        "    for sugar in self.schedule.agents_by_type[Sugar].values(): \n",
+        "    for sugar in self.schedule.agents_by_type[Sugar].values():\n",
         "      sugar.step()\n",
-        "    \n",
+        "\n",
         "    # step Spice agents\n",
-        "    for spice in self.schedule.agents_by_type[Spice].values(): \n",
+        "    for spice in self.schedule.agents_by_type[Spice].values():\n",
         "      spice.step()\n",
         "\n",
         "    # step trader agents\n",
-        "    # to account for agent death and removal we need a seperate data strcuture to \n",
+        "    # to account for agent death and removal we need a seperate data strcuture to\n",
         "    # iterate\n",
         "    trader_shuffle = list(self.schedule.agents_by_type[Trader].values())\n",
         "    self.random.shuffle(trader_shuffle)\n",
         "\n",
-        "    for agent in trader_shuffle: \n",
+        "    for agent in trader_shuffle:\n",
         "      agent.move()\n",
-        "    \n",
+        "\n",
         "    self.schedule.steps += 1 #important for data collector to track number of steps\n",
         "\n",
         "  def run_model(self, step_count=1000):\n",
