--- a/Session_13_Traders_Eat.ipynb
+++ b/Session_13_Traders_Eat.ipynb
@@ -21,20 +21,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ikSl2Mz0m252",
-        "outputId": "02104a58-a88a-42f8-c610-bc2b02905b88"
+        "outputId": "65ed7ed0-2ea7-4294-8f73-e57cd6d3bc41"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m14.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m44.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.1/13.1 MB\u001b[0m \u001b[31m57.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.7/2.7 MB\u001b[0m \u001b[31m100.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.7/11.7 MB\u001b[0m \u001b[31m123.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m104.1/104.1 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m241.0/241.0 kB\u001b[0m \u001b[31m16.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m106.4/106.4 kB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.9/69.9 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.5/59.5 kB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m82.1/82.1 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.9/129.9 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m83.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.5/133.5 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
           ]
         }
       ],
@@ -43,9 +60,9 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "\n",
-        "try: \n",
+        "try:\n",
         "  import mesa\n",
-        "except: \n",
+        "except:\n",
         "  !pip install mesa --quiet\n",
         "import mesa\n",
         "import numpy as np\n",
@@ -66,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "id": "kg-JVcwzON_b"
       },
@@ -97,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
@@ -105,12 +122,12 @@
       "source": [
         "class Sugar(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Sugar: \n",
+        "  Sugar:\n",
         "  - contains an amount of sugar\n",
-        "  - grows 1 amount of sugar at each turn \n",
+        "  - grows 1 amount of sugar at each turn\n",
         "  \"\"\"\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, max_sugar): \n",
+        "  def __init__(self, unique_id, model, pos, max_sugar):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
         "    self.amount = max_sugar\n",
@@ -127,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
@@ -135,7 +152,7 @@
       "source": [
         "class Spice(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Spice: \n",
+        "  Spice:\n",
         "  - contains an amount of spice\n",
         "  - grows 1 amount of spice at each turn\n",
         "  \"\"\"\n",
@@ -145,8 +162,8 @@
         "    self.pos = pos\n",
         "    self.amount = max_spice\n",
         "    self.max_spice = max_spice\n",
-        "  \n",
-        "  def step(self): \n",
+        "\n",
+        "  def step(self):\n",
         "    '''\n",
         "    Spice growth function, adds one unit of spice each step until\n",
         "    max amout\n",
@@ -165,22 +182,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "id": "t51BNfwUnt53"
       },
       "outputs": [],
       "source": [
-        "class Trader(mesa.Agent): \n",
+        "class Trader(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Trader: \n",
+        "  Trader:\n",
         "  - has a metabolism of sugar and spice\n",
         "  - harvest and trade sugar and spice to survive\n",
         "  \"\"\"\n",
         "\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0, \n",
-        "               spice=0, metabolism_sugar=0, metabolism_spice=0, \n",
+        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0,\n",
+        "               spice=0, metabolism_sugar=0, metabolism_spice=0,\n",
         "               vision=0):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
@@ -191,7 +208,7 @@
         "    self.metabolism_spice = metabolism_spice\n",
         "    self.vision = vision\n",
         "\n",
-        "  \n",
+        "\n",
         "  def get_sugar(self, pos):\n",
         "    '''\n",
         "    used in self.get_sugar_amount()\n",
@@ -202,8 +219,8 @@
         "      if type(agent) is Sugar:\n",
         "        return agent\n",
         "    return None\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def get_sugar_amount(self,pos):\n",
         "    '''\n",
         "    used in self.move() as part of self.calculate_welfare()\n",
@@ -213,15 +230,15 @@
         "    if sugar_patch:\n",
         "      return sugar_patch.amount\n",
         "    return 0\n",
-        "  \n",
+        "\n",
         "  def get_spice(self, pos):\n",
         "    '''\n",
         "    used in self.get_spice_amount()\n",
         "    '''\n",
         "\n",
         "    this_cell = self.model.grid.get_cell_list_contents(pos)\n",
-        "    for agent in this_cell: \n",
-        "      if type(agent) is Spice: \n",
+        "    for agent in this_cell:\n",
+        "      if type(agent) is Spice:\n",
         "        return agent\n",
         "    return None\n",
         "\n",
@@ -231,27 +248,27 @@
         "    '''\n",
         "\n",
         "    spice_patch = self.get_spice(pos)\n",
-        "    if spice_patch: \n",
+        "    if spice_patch:\n",
         "      return spice_patch.amount\n",
         "    return 0\n",
-        "  \n",
-        "    \n",
+        "\n",
+        "\n",
         "  def is_occupied_by_other(self,pos):\n",
         "    '''\n",
         "    helper function part 1 of self.move()\n",
         "    '''\n",
         "\n",
-        "    if pos == self.pos: \n",
+        "    if pos == self.pos:\n",
         "      # agent's position is considered unoccupied as agent can stay there\n",
         "      return False\n",
         "    # get contents of each cell in neighborhood\n",
         "    this_cell = self.model.grid.get_cell_list_contents(pos)\n",
-        "    for a in this_cell: \n",
+        "    for a in this_cell:\n",
         "      # see if occupied by another agent\n",
-        "      if isinstance(a, Trader): \n",
+        "      if isinstance(a, Trader):\n",
         "        return True\n",
         "    return False\n",
-        "  \n",
+        "\n",
         "  def calculate_welfare(self, sugar, spice):\n",
         "    '''\n",
         "    helper function part 2 self.move()\n",
@@ -259,11 +276,11 @@
         "\n",
         "    # calculate total resources\n",
         "    m_total = self.metabolism_sugar + self.metabolism_spice\n",
-        "    # Cobb-Douglas functional form    \n",
+        "    # Cobb-Douglas functional form\n",
         "    return sugar**(self.metabolism_sugar/m_total) * spice**(\n",
         "        self.metabolism_spice/m_total)\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def is_starved(self):\n",
         "    '''\n",
         "    Helper function for self.maybe_die()\n",
@@ -272,12 +289,12 @@
         "    return (self.sugar <= 0) or (self.spice <= 0)\n",
         "\n",
         "  ######################################################################\n",
-        "  #                                                                    #  \n",
-        "  #                      MAIN TRADE FUNCTIONS                          #  \n",
+        "  #                                                                    #\n",
+        "  #                      MAIN TRADE FUNCTIONS                          #\n",
         "  #                                                                    #\n",
         "  ######################################################################\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def move(self):\n",
         "    '''\n",
         "    Function for trader agent to identify optimal move for each step in 4 parts\n",
@@ -291,7 +308,7 @@
         "\n",
         "    neighbors = [i\n",
         "                 for i in self.model.grid.get_neighborhood(\n",
-        "                   self.pos, self.moore, True, self.vision  \n",
+        "                   self.pos, self.moore, True, self.vision\n",
         "                 ) if not self.is_occupied_by_other(i)]\n",
         "\n",
         "    # 2. determine which move maximizes welfare\n",
@@ -299,17 +316,17 @@
         "    welfares = [\n",
         "        self.calculate_welfare(\n",
         "            self.sugar + self.get_sugar_amount(pos),\n",
-        "            self.spice + self.get_spice_amount(pos)) \n",
+        "            self.spice + self.get_spice_amount(pos))\n",
         "        for pos in neighbors\n",
         "    ]\n",
         "\n",
         "    # 3. Find closest best option\n",
         "\n",
-        "    # find the highest welfare in welfares \n",
+        "    # find the highest welfare in welfares\n",
         "    max_welfare = max(welfares)\n",
         "    # get the index of max welfare cells\n",
         "    candidate_indices = [i for i in range(len(welfares))\n",
-        "                        if math.isclose(welfares[i], max_welfare, \n",
+        "                        if math.isclose(welfares[i], max_welfare,\n",
         "                                        rel_tol=1e-02)]\n",
         "\n",
         "    # convert index to positions of those cells\n",
@@ -347,7 +364,7 @@
         "    Function to remove Traders who have consumed all their sugar or spice\n",
         "    '''\n",
         "\n",
-        "    if self.is_starved(): \n",
+        "    if self.is_starved():\n",
         "      print(self.unique_id, self.model.schedule.get_type_count(Trader))\n",
         "      self.model.grid.remove_agent(self)\n",
         "      self.model.schedule.remove(self)\n",
@@ -366,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {
         "id": "7DTonjahn2BT"
       },
@@ -376,15 +393,15 @@
         "  \"\"\"\n",
         "  Manager class to run Sugarscape with Traders\n",
         "  \"\"\"\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def __init__(self, width=50,height=50, initial_population=200,\n",
         "               endowment_min=25, endowment_max=50, metabolism_min=1,\n",
         "               metabolism_max=5, vision_min=1, vision_max=5):\n",
-        "    \n",
+        "\n",
         "    #Initiate width and heigh of sugarscape\n",
         "    self.width = width\n",
-        "    self.height = height \n",
+        "    self.height = height\n",
         "    #Initiate population attributes\n",
         "    self.initial_population = initial_population\n",
         "    self.endowment_min = endowment_min\n",
@@ -395,29 +412,29 @@
         "    self.vision_max = vision_max\n",
         "\n",
         "    #initiate activation schedule\n",
-        "    self.schedule = mesa.time.RandomActivationByType(self)    \n",
+        "    self.schedule = mesa.time.RandomActivationByType(self)\n",
         "    #initiate mesa grid class\n",
         "    self.grid = mesa.space.MultiGrid(self.width, self.height, torus=False)\n",
         "\n",
-        "    #read in landscape file from supplmentary material \n",
+        "    #read in landscape file from supplmentary material\n",
         "    sugar_distribution =np.genfromtxt(\"/content/drive/MyDrive/sugar-map.txt\")\n",
         "    spice_distribution = np.flip(sugar_distribution, 1)\n",
-        "    \n",
+        "\n",
         "    agent_id = 0\n",
-        "    for _,x,y in self.grid.coord_iter():\n",
+        "    for _,(x,y) in self.grid.coord_iter():\n",
         "      max_sugar = sugar_distribution[x,y]\n",
-        "      if max_sugar > 0: \n",
+        "      if max_sugar > 0:\n",
         "        sugar = Sugar(agent_id, self, (x,y), max_sugar)\n",
         "        self.schedule.add(sugar)\n",
         "        self.grid.place_agent(sugar, (x,y))\n",
         "        agent_id += 1\n",
-        "    \n",
+        "\n",
         "      max_spice = spice_distribution[x,y]\n",
-        "      if max_spice > 0: \n",
+        "      if max_spice > 0:\n",
         "        spice = Spice(agent_id, self, (x,y), max_spice)\n",
         "        self.schedule.add(spice)\n",
         "        self.grid.place_agent(spice, (x,y))\n",
-        "        agent_id += 1    \n",
+        "        agent_id += 1\n",
         "\n",
         "    for i in range(self.initial_population):\n",
         "      #get agent position\n",
@@ -433,14 +450,14 @@
         "      #give agents vision\n",
         "      vision = int(self.random.uniform(self.vision_min, self.vision_max+1))\n",
         "      #create Trader object\n",
-        "      trader = Trader(agent_id, \n",
+        "      trader = Trader(agent_id,\n",
         "                      self,\n",
         "                      (x,y),\n",
-        "                      moore = False, \n",
-        "                      sugar = sugar, \n",
-        "                      spice = spice, \n",
-        "                      metabolism_sugar = metabolism_sugar, \n",
-        "                      metabolism_spice = metabolism_spice, \n",
+        "                      moore = False,\n",
+        "                      sugar = sugar,\n",
+        "                      spice = spice,\n",
+        "                      metabolism_sugar = metabolism_sugar,\n",
+        "                      metabolism_spice = metabolism_spice,\n",
         "                      vision = vision)\n",
         "      #place agent\n",
         "      self.grid.place_agent(trader, (x,y))\n",
@@ -451,26 +468,26 @@
         "    '''\n",
         "    Unique step function that does staged activation of sugar and spice\n",
         "    and then randomly activates traders\n",
-        "    '''    \n",
+        "    '''\n",
         "    # step Sugar agents\n",
-        "    for sugar in self.schedule.agents_by_type[Sugar].values(): \n",
+        "    for sugar in self.schedule.agents_by_type[Sugar].values():\n",
         "      sugar.step()\n",
-        "    \n",
+        "\n",
         "    # step Spice agents\n",
-        "    for spice in self.schedule.agents_by_type[Spice].values(): \n",
+        "    for spice in self.schedule.agents_by_type[Spice].values():\n",
         "      spice.step()\n",
         "\n",
         "    # step trader agents\n",
-        "    # to account for agent death and removal we need a seperate data strcuture to \n",
+        "    # to account for agent death and removal we need a seperate data strcuture to\n",
         "    # iterate\n",
         "    trader_shuffle = list(self.schedule.agents_by_type[Trader].values())\n",
         "    self.random.shuffle(trader_shuffle)\n",
         "\n",
-        "    for agent in trader_shuffle: \n",
+        "    for agent in trader_shuffle:\n",
         "      agent.move()\n",
         "      agent.eat()\n",
         "      agent.maybe_die()\n",
-        "    \n",
+        "\n",
         "    self.schedule.steps += 1 #important for data collector to track number of steps\n",
         "\n",
         "  def run_model(self, step_count=1000):\n",
